# tr-autonomy-training-visualization-clarsbyte

./: frames_2025-09-21_08.21.34.gv  frames_2025-09-21_15.20.59.gv  frames_2025-09-21_15.44.57.gv
src/my_launch/: package.xml  setup.py
src/my_launch/launch/: robot_launch.py
src/your_solution/: package.xml  setup.py
src/your_solution/calc_error/: calc_error.py
src/your_solution/your_solution/: tf_broadcaster.py
