<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_launch</name>
  <version>0.0.0</version>
  <description>Launch package for autonomy training visualization</description>
  <maintainer email="clarissa@example.com">clarissa</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sim_node</exec_depend>
  <exec_depend>huskybot_cv</exec_depend>
  <exec_depend>your_solution</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>